docs: 添加控制台调用GUI方法的示例代码
在文档中补充了通过控制台创建和清除GUI窗口的具体方法示例，方便开发者快速测试GUI功能

--- a/代码藏经阁.md
+++ b/代码藏经阁.md
@@ -974,6 +974,14 @@ type tiandao_div = widget {
     }
 }
 ```
+在控制台里调用gui的方法：
+```
+# 创建窗口
+gui.CreateWidget gui/tiandao_nickname.gui tiandao_nickname
+# 清除所有窗口
+gui.ClearWidgets
+```
+
 ## 脚本化GUI
 位置：in_game/common/scripted_guis/use_tiandao_sgui.txt [文档](https://eu5.paradoxwikis.com/Scripted_gui)
 
