--- a/代码藏经阁.md
+++ b/代码藏经阁.md
@@ -1015,3 +1015,6 @@ onclick = "[GetScriptedGui('close_tiandao_input_modal_sgui').Execute(GuiScope.Se
     同理，找到Country, 能看到国家相关的所有函数，eg: GetName
 - UI 快速定位
     开启控制台后，按下快捷键 `ctrl + z`, 鼠标移动到ui上就行。
+- 对比
+    对比两个整数值是否相等 [EqualTo_int32( Player.GetOwnedLocationCount, '(int32)1819')]
+    对比两个定点数值是否相等 [EqualTo_CFixedPoint( GetGlobalVariable('tiandao_tips_windows_key').GetValue, '(CFixedPoint)3' )]
