feat(天道修改器): 更新代码藏经阁文档

--- a/代码藏经阁.md
+++ b/代码藏经阁.md
@@ -1,4 +1,5 @@
 # 代码藏经阁
+
 这个是开发MOD时实验的一些代码片段，大多数都没有什么用，只是为了记录一下开发过程中遇到的问题。
 
 我不知道后续会不会用到，所以记录下来，作为备忘录。
@@ -8,6 +9,7 @@
 注：以下所有文件都必须是 utf-8 with BOM 编码，否则游戏会报错。
 
 ## 事件 event
+
 事件存放目录：in_game/events/ [文档](https://eu5.paradoxwikis.com/Event_modding)
 
 文件以xxx.txt命名，eg: tiandao_rename.txt
@@ -50,6 +52,7 @@ tests_event.1 = {
 ```
 
 事件实验记录:
+
 ```txt
 ## 皇帝改名成功了
 tests_event.111 = {
@@ -480,10 +483,10 @@ manual_rename_fix.4 = {
             · = {
                 limit = { is_alive = yes }
                 save_scope_as = target_descendant
-                set_first_name = "静镜" 
+                set_first_name = "静镜"
             }
         }
-        add_gold = 1000 
+        add_gold = 1000
     }
 	# 选项2：给继承人改名（修正版，有效）
     option = {
@@ -598,7 +601,7 @@ manual_rename_fix.6 = {
 				set_first_name = "静镜"
 			}
 			# 反馈：只有点中的那个人会让你加钱
-			owner = { add_gold = 100 } 
+			owner = { add_gold = 100 }
 		}
 	}
 	# --- 第二部分：列出每一个孙辈为独立选项 ---
@@ -631,6 +634,7 @@ manual_rename_fix.6 = {
 	}
 }
 ```
+
 事件开发时，如果有大段重复的代码，建议提取成函数，避免重复编写。
 
 函数声明位置：in_game/common/scripted_effects/rename_effects.txt
@@ -641,12 +645,12 @@ scripted_effects 本质就是多个效果的集合。[文档](https://eu5.parado
 # 定义一个名为 input_number_digit 的“函数”
 # 使用 $DIGIT$ 作为参数占位符
 input_number_digit = {
-	change_global_variable = { 
-		name = pinyin_code 
-		multiply = 10 
+	change_global_variable = {
+		name = pinyin_code
+		multiply = 10
 	}
-	change_global_variable = { 
-		name = pinyin_code 
+	change_global_variable = {
+		name = pinyin_code
 		add = $DIGIT$
 	}
 }
@@ -657,32 +661,37 @@ option = {
     trigger_event_non_silently = { id = tests_event.4 }
 }
 ```
+
 控制台调用事件：`event tests_event.4`
 
 ## 效果 effect
+
 [文档](https://eu5.paradoxwikis.com/Effect)
+
 - 指定国家范围：
-    语法：c:[国家TAG] eg: c:MNG // 指定国家大明
-    ```
-    # 控制台执行 国家 名字 从 明 变成了 明朝
-    effect c:MNG = { change_country_name = "明朝" }
-    ```
+  语法：c:[国家TAG] eg: c:MNG // 指定国家大明
+  ```
+  # 控制台执行 国家 名字 从 明 变成了 明朝
+  effect c:MNG = { change_country_name = "明朝" }
+  ```
 - 控制台对全局变量的操作：
-    语法：
-    ```
-        # 设置全局变量
-        effect set_global_variable = { name = [变量名] value = [值] }
-        # 删除全局变量
-        effect remove_global_variable = [变量名]
-    ```
-    示例：
-    ```
-    # 控制台执行 全局变量 test_var 值 100
-    effect set_global_variable = { name = test_var value = 100 }
-    # 控制台执行 删除全局变量 test_var
-    effect remove_global_variable = test_var
-    ```
+  语法：
+  ```
+      # 设置全局变量
+      effect set_global_variable = { name = [变量名] value = [值] }
+      # 删除全局变量
+      effect remove_global_variable = [变量名]
+  ```
+  示例：
+  ```
+  # 控制台执行 全局变量 test_var 值 100
+  effect set_global_variable = { name = test_var value = 100 }
+  # 控制台执行 删除全局变量 test_var
+  effect remove_global_variable = test_var
+  ```
+
 ## 图形界面 GUI
+
 位置：in_game/gui/xxx.gui [文档](https://eu5.paradoxwikis.com/Interface_modding_guide)
 
 每一个独立的gui文件都需要一个window。同样的这个window必须有一个name属性。
@@ -696,6 +705,7 @@ window = { name = "tiandao_rename" }
 # 告诉引擎：这个 GUI 名字叫 tiandao_rename，对应的文件是 gui/tiandao_rename.gui
 gui/tiandao_rename.gui = tiandao_rename
 ```
+
 **Web → Jomini GUI 心智模型 · 加强版速查表**
 | Web 概念 | Jomini GUI 对应物 | 是否交互 | 常用属性 | 性能 / 使用备注 |
 |---------|------------------|----------|----------|------------------|
@@ -713,51 +723,60 @@ gui/tiandao_rename.gui = tiandao_rename
 | `:disabled` | `enabled` | ❌ | `enabled` | false 时仍占位，只是不能点 |
 | `@click` | `onclick` | ✅ | `onclick` | 可执行 GUI 脚本 / 控制台命令 |
 **属性速查表**
+
 > 适用于 EU5 / Jomini GUI  
 > 用途：查「这个属性是干嘛的」「能不能用」「有没有坑」
+
 ---
+
 通用属性（几乎所有控件）
 
-| 属性 | 写法示例 | 说明 |
-|----|----|----|
-| `size` | `size = { 400 120 }` | 固定控件尺寸；Jomini **不会自动计算大小** |
-| `margin` | `margin = { 5 5 10 10 }` | 外边距，影响控件与外部的距离 |
-| `padding` | `padding = { 4 4 6 6 }` | 内边距，影响内容与边框的距离 |
-| `visible` | `visible = "[SomeCondition]"` | 是否显示；`false` 时**不占布局位置** |
-| `enabled` | `enabled = "[SomeCondition]"` | 是否可交互；禁用后仍可见 |
-| `tooltip` | `tooltip = "[GetTooltip]"` | 鼠标悬停提示文本 |
-| `datacontext` | `datacontext = "[GetTooltip]"` | 数据上下文，通常用于绑定数据模型 |
+| 属性          | 写法示例                       | 说明                                      |
+| ------------- | ------------------------------ | ----------------------------------------- |
+| `size`        | `size = { 400 120 }`           | 固定控件尺寸；Jomini **不会自动计算大小** |
+| `margin`      | `margin = { 5 5 10 10 }`       | 外边距，影响控件与外部的距离              |
+| `padding`     | `padding = { 4 4 6 6 }`        | 内边距，影响内容与边框的距离              |
+| `visible`     | `visible = "[SomeCondition]"`  | 是否显示；`false` 时**不占布局位置**      |
+| `enabled`     | `enabled = "[SomeCondition]"`  | 是否可交互；禁用后仍可见                  |
+| `tooltip`     | `tooltip = "[GetTooltip]"`     | 鼠标悬停提示文本                          |
+| `datacontext` | `datacontext = "[GetTooltip]"` | 数据上下文，通常用于绑定数据模型          |
 
 说明：
+
 - 所有表达式 **必须写在 `[]` 中**
 - `visible` ≠ `enabled`
 - 不存在 `display: none` 这种行为
+
 ---
+
 布局控件（`vbox / hbox`）
 
-| 属性 | 写法示例 | 说明 |
-|----|----|----|
-| `spacing` | `spacing = 8` | 子元素之间的间距（最常用） |
-| `size` | `size = { 400 300 }` | 布局容器尺寸，通常必须显式写 |
-| `margin` | `margin = { 5 5 }` | 整个布局块与外部的距离 |
+| 属性      | 写法示例             | 说明                         |
+| --------- | -------------------- | ---------------------------- |
+| `spacing` | `spacing = 8`        | 子元素之间的间距（最常用）   |
+| `size`    | `size = { 400 300 }` | 布局容器尺寸，通常必须显式写 |
+| `margin`  | `margin = { 5 5 }`   | 整个布局块与外部的距离       |
 
 说明：
+
 - Jomini **没有自动流式布局**
 - 没有 `flex / grid / justify / align`
 - 一切排版靠 `vbox / hbox + size + spacing`
+
 ---
 
 文本控件
 
 1️⃣ `text_single`（单行文本）
 
-| 属性 | 写法示例 | 说明 |
-|----|----|----|
-| `text` | `text = "MY_TEXT_KEY"` | 文本内容（通常是 localization key） |
-| `max_width` | `max_width = 300` | 最大宽度，超出会被裁剪 |
-| `tooltip` | `tooltip = "[GetTooltip]"` | 悬停提示 |
+| 属性        | 写法示例                   | 说明                                |
+| ----------- | -------------------------- | ----------------------------------- |
+| `text`      | `text = "MY_TEXT_KEY"`     | 文本内容（通常是 localization key） |
+| `max_width` | `max_width = 300`          | 最大宽度，超出会被裁剪              |
+| `tooltip`   | `tooltip = "[GetTooltip]"` | 悬停提示                            |
 
 说明：
+
 - **单行**
 - 不支持自动换行
 - 宽度不够会直接截断
@@ -766,12 +785,13 @@ gui/tiandao_rename.gui = tiandao_rename
 
 2️⃣ `text_multi`（多行文本）
 
-| 属性 | 写法示例 | 说明 |
-|----|----|----|
-| `text` | `text = "MY_LONG_TEXT"` | 多行文本内容 |
-| `max_width` | `max_width = 400` | 达到宽度后自动换行 |
+| 属性        | 写法示例                | 说明               |
+| ----------- | ----------------------- | ------------------ |
+| `text`      | `text = "MY_LONG_TEXT"` | 多行文本内容       |
+| `max_width` | `max_width = 400`       | 达到宽度后自动换行 |
 
 说明：
+
 - 支持自动换行
 - 适合描述 / 说明 / 事件文本
 
@@ -779,12 +799,12 @@ gui/tiandao_rename.gui = tiandao_rename
 
 按钮（`button`）
 
-| 属性 | 写法示例 | 说明 |
-|----|----|----|
-| `text` | `text = "CONFIRM"` | 按钮文字 |
+| 属性      | 写法示例                    | 说明                 |
+| --------- | --------------------------- | -------------------- |
+| `text`    | `text = "CONFIRM"`          | 按钮文字             |
 | `onclick` | `onclick = "[DoSomething]"` | 点击事件（GUI 脚本） |
-| `enabled` | `enabled = "[CanClick]"` | 是否可点击 |
-| `tooltip` | `tooltip = "[WhyDisabled]"` | 禁用原因说明 |
+| `enabled` | `enabled = "[CanClick]"`    | 是否可点击           |
+| `tooltip` | `tooltip = "[WhyDisabled]"` | 禁用原因说明         |
 
 高级用法：
 
@@ -795,7 +815,9 @@ onclick = "[ExecuteConsoleCommand('effect ...')]"
 # ExecuteConsoleCommands 可以调用多个，以`;`隔开 如果其中一个报错，后面的就不会执行
 # ExecuteConsoleCommandsForced 可以调用多个，以`;`隔开 如果其中一个报错，后面的会继续执行
 ```
+
 说明：
+
 - button 是 最轻量、最安全的交互控件
 - 能用按钮就不要用 drop_down
 
@@ -803,24 +825,25 @@ onclick = "[ExecuteConsoleCommand('effect ...')]"
 
 输入框（`editbox_single`）
 
-| 属性 | 写法示例 | 说明 |
-|----|----|----|
-| `size` | `size = { 300 30 }` | 输入框尺寸 |
-| `editbox_label` | `blockoverride "editbox_label" { text = "请输入..." }` | placeholder（插槽） |
-| `maxcharacters` | `maxcharacters = 10` | 最大输入字符数 |
-| `raw_text` | `raw_text = "[GetVariableSystem.Get('input_content')]"` | 输入框内容（表达式） |
-| `ontextedited` | `ontextedited = "[GetVariableSystem.Set('input_content', GetTextFromSelfOrAnyChildEditbox(PdxGuiWidget.Self))]"` | 输入框内容变化时触发 |
+| 属性            | 写法示例                                                                                                         | 说明                 |
+| --------------- | ---------------------------------------------------------------------------------------------------------------- | -------------------- |
+| `size`          | `size = { 300 30 }`                                                                                              | 输入框尺寸           |
+| `editbox_label` | `blockoverride "editbox_label" { text = "请输入..." }`                                                           | placeholder（插槽）  |
+| `maxcharacters` | `maxcharacters = 10`                                                                                             | 最大输入字符数       |
+| `raw_text`      | `raw_text = "[GetVariableSystem.Get('input_content')]"`                                                          | 输入框内容（表达式） |
+| `ontextedited`  | `ontextedited = "[GetVariableSystem.Set('input_content', GetTextFromSelfOrAnyChildEditbox(PdxGuiWidget.Self))]"` | 输入框内容变化时触发 |
 
 ---
 
 图像 (`icon`)
 
-| 属性 | 写法示例 | 说明 |
-|----|----|----|
+| 属性     | 写法示例                  | 说明     |
+| -------- | ------------------------- | -------- |
 | `sprite` | `sprite = "GFX_flag_fra"` | 图片资源 |
-| `size` | `size = { 32 32 }` | 图像尺寸 |
+| `size`   | `size = { 32 32 }`        | 图像尺寸 |
 
 说明：
+
 - Jomini 中 所有图片都是 icon
 - 国旗 / 人物 / UI 图标统一机制
 
@@ -828,12 +851,13 @@ onclick = "[ExecuteConsoleCommand('effect ...')]"
 
 列表 (`dynamicgrid`)
 
-| 属性 | 写法示例 | 说明 |
-|----|----|----|
-| `item_template` | `item_template = "item_template"` | 子项模板 |
-| `datacontext` | `datacontext = "[GetCountryList]"` | 数据来源 |
+| 属性            | 写法示例                           | 说明     |
+| --------------- | ---------------------------------- | -------- |
+| `item_template` | `item_template = "item_template"`  | 子项模板 |
+| `datacontext`   | `datacontext = "[GetCountryList]"` | 数据来源 |
 
 说明：
+
 - 动态列表，根据数据动态生成子项
 - 每个子项都是一个 `item_template` 的实例
 - 数据量大容易卡
@@ -844,6 +868,7 @@ onclick = "[ExecuteConsoleCommand('effect ...')]"
 下拉框 (`drop_down`)
 
 示例：
+
 ```
 drop_down = {
     name = "tiandao_attr_selector"
@@ -859,7 +884,7 @@ drop_down = {
     item_adapter = {
         list = {
             # 这里通常需要绑定一个 DataModel
-            datamodel = "[GetPlayer.GetCustomList]" 
+            datamodel = "[GetPlayer.GetCustomList]"
             item = {
                 widget_standard = {
                     # 点击选项后的逻辑
@@ -870,7 +895,9 @@ drop_down = {
     }
 }
 ```
+
 说明：
+
 - 下拉框，性能开销 `非常大`
 - 不适合高频刷新
 - 小功能建议拆成多个 `button`
@@ -879,11 +906,11 @@ drop_down = {
 
 窗口 (`window`)
 
-| 属性 | 写法示例 | 说明 |
-|----|----|----|
-| `parentanchor` | `parentanchor = center` | 窗口居中 |
-| `allow_outside` | `allow_outside = yes` | 是否允许超出父容器 |
-| `title` | `title = "My Window"` | 窗口标题 |
+| 属性            | 写法示例                | 说明               |
+| --------------- | ----------------------- | ------------------ |
+| `parentanchor`  | `parentanchor = center` | 窗口居中           |
+| `allow_outside` | `allow_outside = yes`   | 是否允许超出父容器 |
+| `title`         | `title = "My Window"`   | 窗口标题           |
 
 ---
 
@@ -922,6 +949,7 @@ app_button = {
 }
 
 ```
+
 type 类似组件，可以在多个gui文件中运行
 
 ```
@@ -938,19 +966,20 @@ icon = {
 }
 
 ```
+
 🧬 进阶复用：Type vs Template
 
 - 1. Type (组件)
-    - **用途**: 定义新结构 (New Tags)。
-    - **调用**: 直接作为标签名使用，如 `tiandao_input_modal = {}`。
-    - **核心**: 支持 `blockoverride` 插槽，适合复杂的 UI 模块。
+  - **用途**: 定义新结构 (New Tags)。
+  - **调用**: 直接作为标签名使用，如 `tiandao_input_modal = {}`。
+  - **核心**: 支持 `blockoverride` 插槽，适合复杂的 UI 模块。
 - 2. Template (样式/宏)
-    - **用途**: 定义属性集合 (CSS Classes)。
-    - **调用**: 在已有控件内使用 `using = template_name`。
-    - **核心**: 适合复用动画、边距、颜色、字体样式等原子属性。
+  - **用途**: 定义属性集合 (CSS Classes)。
+  - **调用**: 在已有控件内使用 `using = template_name`。
+  - **核心**: 适合复用动画、边距、颜色、字体样式等原子属性。
 - 💡 开发建议
-    - 复杂的 UI 块封装为 **Type**。
-    - 统一的视觉规范（如金色文字、阴影效果）封装为 **Template**。
+  - 复杂的 UI 块封装为 **Type**。
+  - 统一的视觉规范（如金色文字、阴影效果）封装为 **Template**。
 
 简单说，一个是组件，可以指定部分内容被自定义替换实现差异化。一个是纯粹的直接复用，没有交互，没有覆盖。内容完全相同。
 
@@ -958,23 +987,25 @@ icon = {
 # 模拟一个带边框和内边距的 div
 type tiandao_div = widget {
     size = { 100% 200 } # 必须给高度，或者用 layoutpolicy
-    
+
     # 背景和边框 (CSS background/border)
     background = {
         using = background_area_dark # 使用游戏内置样式
         margin = { 5 5 }
     }
-    
+
     # 内部布局 (CSS padding/flex)
     vbox = {
         margin = { 10 10 }
         spacing = 5
-        
+
         block "content" {} # 具名插槽
     }
 }
 ```
+
 在控制台里调用gui的方法：
+
 ```
 # 创建窗口
 gui.CreateWidget gui/tiandao_nickname.gui tiandao_nickname
@@ -983,6 +1014,7 @@ gui.ClearWidgets
 ```
 
 ## 脚本化GUI
+
 位置：in_game/common/scripted_guis/use_tiandao_sgui.txt [文档](https://eu5.paradoxwikis.com/Scripted_gui)
 
 gui界面触发交互时要执行的内容就可以放在这里。比如执行触发`事件、效果`等等。
@@ -1002,19 +1034,24 @@ onclick = "[GetScriptedGui('close_tiandao_input_modal_sgui').Execute(GuiScope.Se
 ```
 
 ## 其他
+
 - 控制台重载文件 debug 模式下不用手动执行，游戏会自动重载，热更新
-    - reload localization 重新加载本地化文件
-    - reload gui 重新加载 GUI 文件
-    - reload script 重新加载 Script / Effect / Trigger
-    - reload textures 重新加载资源文件：国旗 / icon / 图片
-    - reload event 重新加载事件文件
+  - reload localization 重新加载本地化文件
+  - reload gui 重新加载 GUI 文件
+  - reload script 重新加载 Script / Effect / Trigger
+  - reload textures 重新加载资源文件：国旗 / icon / 图片
+  - reload event 重新加载事件文件
 - 查看角色相关函数
-    控制台，输入 explorer
-    在弹出的 Object Explorer 窗口中，在 Providers 选择 data Types 选项。
-    找到Character, 能看到角色相关的所有函数，eg: GetName
-    同理，找到Country, 能看到国家相关的所有函数，eg: GetName
+  控制台，输入 explorer
+  在弹出的 Object Explorer 窗口中，在 Providers 选择 data Types 选项。
+  找到Character, 能看到角色相关的所有函数，eg: GetName
+  同理，找到Country, 能看到国家相关的所有函数，eg: GetName
 - UI 快速定位
-    开启控制台后，按下快捷键 `ctrl + z`, 鼠标移动到ui上就行。
+  开启控制台后，按下快捷键 `ctrl + z`, 鼠标移动到ui上就行。
 - 对比
-    对比两个整数值是否相等 [EqualTo_int32( Player.GetOwnedLocationCount, '(int32)1819')]
-    对比两个定点数值是否相等 [EqualTo_CFixedPoint( GetGlobalVariable('tiandao_tips_windows_key').GetValue, '(CFixedPoint)3' )]
+  对比两个整数值是否相等 [EqualTo_int32( Player.GetOwnedLocationCount, '(int32)1819')]
+  对比两个定点数值是否相等 [EqualTo_CFixedPoint( GetGlobalVariable('tiandao_tips_windows_key').GetValue, '(CFixedPoint)3' )]
+
+### 20260120
+
+button_checkbox_auto 游戏内部的单选按钮，点击后会切换状态，类似checkbox的自动切换。
